# docdrift

./: .gitignore  DECISIONS.md  README.md  SPONSOR_DEFENSE.md  app.json  manifest.json  package-lock.json  package.json
.anna/: app.json  dev-app.json  executas.lock.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release-binaries.yml
bundle/: anna-tool-ids.js  app.js  index.html  styles.css  tokens.css
data/fixtures/: drift_seed.jsonl
docs/: AUDIT_REPORT.md  friction-log.md
docs/assets/: _asset-utilities.css  _tailwind.config.snippet.ts  _tokens.css  export.cjs  generate-devpost-gallery.html  generate-devpost-thumbnail.html  generate-og-image.html  generate-readme-hero.html  generate-youtube-thumbnail.html  sanity-check.html
executas/docdrift/: executa.json  plugin.py  pyproject.toml
executas/docdrift/.anna/: executa.json
public/: pitch.html
scripts/: bench.py  record-docdrift.mjs  screenshot-docdrift.mjs  verify_offline.py
tests/: test_plugin.py
