[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tool-edycutjong-docdrift-wxjwg6r2"
version = "0.3.0"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0.0"
]

[project.scripts]
tool-edycutjong-docdrift-wxjwg6r2 = "plugin:main"

[tool.hatch.build.targets.wheel]
only-include = ["plugin.py"]
